--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,8 @@
 			"extensions": [
 				"bradlc.vscode-tailwindcss",
 				"dsznajder.es7-react-js-snippets"
-			]
+			],
+			"editor.wordWrap": "on"
 		}
 	}
 
